[gd_scene load_steps=3 format=2]

[ext_resource path="res://entity/bullet/guardian_bullet.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 1.0
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 11, 0 )
initial_velocity = 170.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[node name="guardian_bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
amount = 250
lifetime = 0.8
explosiveness = 0.05
process_material = SubResource( 1 )

[node name="TimerHit" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerHit" to="." method="_on_TimerHit_timeout"]
